restSQL 0.8.8 adds an automatic resource definition generation tool